<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trackResultItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/albumArtView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:adjustViewBounds="true"
                android:contentDescription="@string/album_art_description"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/placeholder_disc" />

            <TextView
                android:id="@+id/resultMainTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/song_name_placeholder"
                android:textColor="@color/colorTextLight"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/albumArtView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/resultSecondaryTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/album_name_placeholder"
                android:textColor="@color/colorTextDimmed"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/resultTertiaryTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/albumArtView"
                app:layout_constraintTop_toBottomOf="@+id/resultMainTitle" />

            <TextView
                android:id="@+id/resultTertiaryTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/artist_name_placeholder"
                android:textColor="@color/colorTextDimmed"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/albumArtView" />

            <ImageView
                android:id="@+id/resultExplicitIndicator"
                android:layout_width="4dp"
                android:layout_height="0dp"
                android:background="@color/colorExplicit"
                android:contentDescription="@string/explicit_description"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/resultUnreadableIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/resultUnreadableIndicator"
                android:layout_width="4dp"
                android:layout_height="0dp"
                android:background="@color/colorUnreadable"
                android:contentDescription="@string/unreadable_description"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resultExplicitIndicator"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>