<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/HeaderCard"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorNav"
        app:cardCornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/TracklistHeaderConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="gone">

            <TextView
                android:id="@+id/TracklistName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:importantForAutofill="no"
                android:singleLine="true"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/BackButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="sample_text" />

            <ImageButton
                android:id="@+id/BackButton"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="56dip"
                android:layout_height="0dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/back_button_description"
                android:scaleType="centerInside"
                android:tint="@color/colorTextLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_arrow_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/SearchBarConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SearchBar">

            <ImageButton
                android:id="@+id/SearchButton"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/search_button_description"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:scaleType="fitEnd"
                android:tint="@color/colorTextLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search" />

            <EditText
                android:id="@+id/SearchBar"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="56dp"
                android:background="#00FFFFFF"
                android:hint="@string/search_deezer"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect|text"
                android:singleLine="true"
                android:textColor="@color/design_default_color_on_primary"
                android:textColorHint="#A6FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ResultConstraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@id/MainBottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ResultRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="28dp"
            android:paddingBottom="6dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="10"
            tools:listitem="@layout/track_result_item" />

        <ProgressBar
            android:id="@+id/resultsLoadingProgressBar"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_width="75dip"
            android:layout_height="75dip"
            android:indeterminateTint="@color/colorTextDimmed"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/MainBottomNav"
        android:layout_width="0dp"
        android:layout_height="56dip"
        android:background="@color/colorNav"
        app:itemIconTint="@color/colorTextLight"
        app:itemTextColor="@color/colorTextLightDimmed"
        app:labelVisibilityMode="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>